server/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-breeder
  labels:
    app: llama-breeder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama-breeder
  template:
    metadata:
      labels:
        app: llama-breeder
    spec:
      containers:
        - name: llama-breeder-server
          image: "europe-west1-docker.pkg.dev/llamabreeder/server/llama-breeder:latest"
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: "/health-check"
              port: 8081
            initialDelaySeconds: 45
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: "/health-check"
              port: 8081
            initialDelaySeconds: 45
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: llama-breeder-service
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  selector:
    app: llama-breeder
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
