server/k8s/httpsingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  annotations:
    networking.gke.io/managed-certificates: testhttps
    kubernetes.io/ingress.global-static-ip-name: "https-static-ip"
spec:
  rules:
    - host: test.llamabreedergame.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: llama-breeder-service
                port:
                  number: 8081
