server/k8s/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    networking.gke.io/managed-certificates: testhttps
    kubernetes.io/ingress.global-static-ip-name: "server-static-ip"
spec:
  tls:
    - hosts:
        - api.llamabreedergame.com
        secretName: server-secret
  rules:
    - host: api.llamabreedergame.com
      http:
        paths:
          - path: /
            backend:
              serviceName: llama-breeder-service
              servicePort: 8081


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "https-static-ip"
spec:
  tls:
    - hosts:
        - test.llamabreedergame.com
        secretName: server-secret
  rules:
    - host: test.llamabreedergame.com
      http:
        paths:
          - path: /
            backend:
              serviceName: llama-breeder-service
              servicePort: 8081
